fix spacings && animation modal && modal patient

--- a/frontend/src/styles/PatientsModal.css
+++ b/frontend/src/styles/PatientsModal.css
@@ -1,3 +1,24 @@
+.modal-content {
+    width: 100%;
+    max-width: 80%;
+    background: #f8f8ff;
+    padding: 2.5rem;
+    position: relative;
+    border-radius: 0.24rem;
+}
+
+.modal-overlay {
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .header-modal {
     display: flex;
     align-items: center;
@@ -89,4 +110,16 @@
     height: 50px;
 }
 
+.ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity 500ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open{
+    opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+    opacity: 0;
+}
 
